Refactoring to Entity Framework Core (db connestion needs to be changed)

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Tweetbook;TrustedConnection=True;MultipleActiveResultSets=True"
+  },
   "SwaggerOptions": {
     "JsonRoute": "swagger/{documentName}/swagger.json",
     "Description": "Moje API",
